{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 14,
  "lineage": "dab84a7c-4f65-4e51-7b67-694c60107b42",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-o1-nic",
            "ip_configuration": [
              {
                "name": "web-o1-ip",
                "primary": true,
                "private_ip_address": "1.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "westus2",
            "name": "web-o1-nic",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_server_nsg_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-o1-nic|/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "network_interface_id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-o1-nic",
            "network_security_group_id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_server_nic",
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "location": "westus2",
            "name": "web-server-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
            "name": "web-server-subnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "westus2",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg",
            "subnet": [
              {
                "address_prefix": "1.0.1.0/24",
                "id": "/subscriptions/e013c260-fa82-4138-b148-1ce36c8788ef/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
                "name": "web-server-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}